--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>v3.2/basic-jdbc</module>
     <module>v3.2/impersonate</module>
     <module>v3.2/jdbc-h2-console</module>
+      <module>v3.2/password-encoder-default</module>
   </modules>
 
   <properties>
