Added remember me token module

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>v3.2/jdbc-h2-console</module>
     <module>v3.2/password-encoder-default</module>
     <module>v3.2/password-encoder-bcrypt</module>
+    <module>v3.2/rememberme-token</module>
   </modules>
 
   <properties>
