Added V4 basic-jdbc module

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>v3/xml/rememberme-persistent</module>
     <module>v3/xml/rememberme-token</module>
     <module>v4/javaconfig/v4-basic-inmemory</module>
+    <module>v4/javaconfig/v4-basic-jdbc</module>
   </modules>
 
   <properties>
