--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>v4/javaconfig/v4-password-encoder-bcrypt</module>
     <module>v4/javaconfig/v4-rememberme-token</module>
     <module>v4/javaconfig/v4-rememberme-persistent</module>
+    <module>v4/javaconfig/v4-jdbc-h2-console</module>
   </modules>
 
   <properties>
