--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>v4/javaconfig/v4-rememberme-token</module>
     <module>v4/javaconfig/v4-rememberme-persistent</module>
     <module>v4/javaconfig/v4-jdbc-h2-console</module>
+    <module>v4/javaconfig/v4-jdbc</module>
   </modules>
 
   <properties>
