--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <name>spring-security</name>
+
   <groupId>xpadro.spring</groupId>
   <artifactId>spring-security</artifactId>
+
+  <name>spring-security</name>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -18,6 +20,7 @@
     <module>v3/xml/password-encoder-bcrypt</module>
     <module>v3/xml/rememberme-persistent</module>
     <module>v3/xml/rememberme-token</module>
+
     <module>v4/javaconfig/v4-basic-inmemory</module>
     <module>v4/javaconfig/v4-basic-jdbc</module>
     <module>v4/javaconfig/v4-password-encoder-bcrypt</module>
@@ -25,6 +28,8 @@
     <module>v4/javaconfig/v4-rememberme-persistent</module>
     <module>v4/javaconfig/v4-jdbc-h2-console</module>
     <module>v4/javaconfig/v4-jdbc</module>
+
+    <module>v4/boot/v4-boot-password-encoder-bcrypt</module>
   </modules>
 
   <properties>
