Added Spring Boot password encoder module

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <module>v4/javaconfig/v4-jdbc</module>
 
     <module>v4/boot/v4-boot-basic-inmemory</module>
+    <module>v4/boot/v4-boot-password-encoder-bcrypt</module>
 
     <module>v4/xml/v4-xml-basic-inmemory</module>
   </modules>
