--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
     <module>v4/boot/v4-boot-password-encoder-bcrypt</module>
     <module>v4/boot/v4-boot-rememberme-token</module>
     <module>v4/boot/v4-boot-rememberme-persistent</module>
+    <module>v4/boot/v4-boot-jdbc</module>
+    <module>v4/boot/v4-boot-jdbc-thymeleaf</module>
 
     <module>v4/xml/v4-xml-basic-inmemory</module>
     <module>v4/xml/v4-xml-password-encoder-bcrypt</module>
