--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
     <module>v4/xml/v4-xml-basic-inmemory</module>
     <module>v4/xml/v4-xml-password-encoder-bcrypt</module>
+    <module>v4/xml/v4-xml-jdbc</module>
   </modules>
 
   <properties>
