--- a/v4/javaconfig/pom.xml
+++ b/v4/javaconfig/pom.xml
@@ -47,6 +47,15 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
